--- a/testApp/templates/indexLogged.html
+++ b/testApp/templates/indexLogged.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	{% load static %}
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
+<!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="{% static 'images/icons/favicon.ico' %}"/>
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}">
@@ -15,13 +15,13 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'fonts/iconic/css/material-design-iconic-font.min.css' %}">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'vendor/animate/animate.css' %}">
-<!--===============================================================================================-->	
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'vendor/css-hamburgers/hamburgers.min.css' %}">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'vendor/animsition/css/animsition.min.css' %}">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'vendor/select2/select2.min.css' %}">
-<!--===============================================================================================-->	
+<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'vendor/daterangepicker/daterangepicker.css' %}">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'css/util.css' %}">
@@ -30,41 +30,51 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/modelEdit.css' %}">
 <!--===============================================================================================-->
 </head>
-<body class="body"> 
-	
+<body class="body">
+
 	<div class="limiter">
 		<div class="topnav">
 			<a class="active" href="/testApp/modelChoice">
 				<img src="{% static 'images/home-icon-white.png' %}" class="wrap-home-top-bar">
 			</a>
-			<a href="#contact">Help</a>
+			<a href="#contact" onclick="openForm()">Help</a>
 			<img src="{% static 'images/BioPath3.png' %}" class="wrap-biopath-logo-top-bar">
 			<p class="web-title">BioPath</p>
-			
+
 			<p class="username" id="username">User: {{ user.get_username }}</a>
-			
+
 			<a href="{% url 'logout_view' %}" id="topnav-logout-button" class="login100-form-btn"><button type="button">
 				Log Out
 			</button></a>
-
 			
-		
+			<script>
+				function openForm() {
+					document.getElementById("myForm").style.display = "block";
+				}
+
+				function closeForm() {
+					document.getElementById("myForm").style.display = "none";
+				}
+			</script>
+
+
+
 		</div>
 	<div class="container-login100" style="background-image: url('{% static 'images/bg-01.jpg' %}');">
 		{% block modelChoice %}
 	    {% endblock %}
-			
+
 		{% block moduleEdit %}
 		{% endblock %}
 
 		{% block modelEdit %}
 		{% endblock %}
 	</div>
-		
+
 	</div>
-	
-	
-	
+
+
+
 <!--===============================================================================================-->
 	<script src="{% static 'vendor/jquery/jquery-3.2.1.min.js' %}"></script>
 <!--===============================================================================================-->
