--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -30,6 +30,12 @@
             </div>
         </div>
     </form>
+
+		<form method="post" action="#">
+			{% csrf_token %}
+			<button type="submit" name="deleteModel" class="play-pause">CLEAR MODEL</button>
+		</form>
+
 		<div class="form-popup" id="myForm">
 			<form action="/action_page.php" class="form-container">
 				<h2>Help</h2>
