--- a/testApp/static/css/moduleEdit.css
+++ b/testApp/static/css/moduleEdit.css
@@ -14,7 +14,7 @@ button {
 .viewAndCreateReaction {
     position: absolute;
     height: 100%;
-    width: 100%;
+    width: 1440px;
     padding: 2%;
 
 
