--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -331,8 +331,8 @@ iframe {
 }
 
 .username {
-  margin-top: 1%;
-  margin-right: 1%;
+  margin-top: 13px;
+  margin-right: 1px;
   font-size: 18px;
   color: #EEEEEE;
 }
