--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -50,6 +50,10 @@
 				<hr>
 				<h4>If you would like to view a specific reaction, click the button in the variables section below the enzyme's name.</h4>
 				<hr>
+				<h4>If you would like to clear all of the reactions from your model and start over, click the "CLEAR MODEL" button.</h4>
+				<hr>
+				<h4>*NOTE* The "CLEAR MODEL" button will not appear if you're viewing "Our Models".</h4>
+				<hr>
 				<button type="button" class="btn cancel" onclick="closeForm()">Close</button>
 			</form>
 		</div>
