Disable clear model btn for public models

--- a/testApp/templates/modelEdit.html
+++ b/testApp/templates/modelEdit.html
@@ -33,7 +33,7 @@
 
 		<form method="post" action="#">
 			{% csrf_token %}
-			<button type="submit" name="deleteModel" class="play-pause">CLEAR MODEL</button>
+			<button type="submit" name="deleteModel" class="play-pause" id="clearModelButton">CLEAR MODEL</button>
 		</form>
 
 		<div class="form-popup" id="myForm">
