Reset password forms

--- a/testApp/templates/index.html
+++ b/testApp/templates/index.html
@@ -52,6 +52,17 @@
 			{% block signup %}
 			{% endblock %}
 
+			{% block forgotPasswordForm %}
+			{% endblock %}
+
+			{% block passwordResetDone %}
+			{% endblock %}
+
+			{% block passwordResetComplete %}
+			{% endblock %}
+
+			{% block passwordResetConfirm %}
+			{% endblock %}
 		
 
 		</div>
