--- a/testApp/templates/registration/login.html
+++ b/testApp/templates/registration/login.html
@@ -6,10 +6,11 @@
     <form class="login100-form" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button class="forgot-password">Forgot Password? Click here to reset</button>
+        
         <div class="login-flex">
             <button type="submit" class="login100-form-btn">Login</button>
         </div>
     </form>
+    <a href="/testApp/accounts/password_reset/"><button class="forgot-password">Forgot Password? Click here to reset</button></a>
 </div>
 {% endblock %}
