--- a/testApp/templates/moduleEdit.html
+++ b/testApp/templates/moduleEdit.html
@@ -39,6 +39,10 @@
 		var myXCoor = '{{xCoor}}';
 		var myYCoor = '{{yCoor}}';
 
+		var moduleID = '{{moduleID}}'
+
+		console.log(moduleID);
+
 		var isPublic = false;
 		isPublic = '{{isPublic}}';
 
@@ -49,7 +53,6 @@
 		console.log(allSubs);
 		console.log(allModules);
 	</script>
-			<img class="step1Image" id="step1" src="{% static 'images/GlycolysisStep1.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Glucose" src="{% static 'images/Glucose.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Glucose-6-Phosphate" src="{% static 'images/Glucose-6-Phosphate.jpg' %}" style="display: none;">
 			<img class="step1Image" id="Fructose-6-Phosphate" src="{% static 'images/Fructose-6-Phosphate.jpg' %}" style="display: none;">
