Fixing password reset pathing

--- a/testApp/templates/registration/password_reset_done.html
+++ b/testApp/templates/registration/password_reset_done.html
@@ -7,6 +7,6 @@
   </p>
   <p>
     If you don't receive an email, please make sure you've entered the address you registered with,
-    and check your spam folder.
+    and check your 
   </p>
 {% endblock %}
