--- a/testApp/static/css/main.css
+++ b/testApp/static/css/main.css
@@ -310,6 +310,23 @@ iframe {
   background: linear-gradient(top, #19384A, #347787);
 }
 
+.wrap-password-reset {
+  display: inline-block;
+  flex-direction: column;
+  width: 600px;
+  height: 100px;
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 40px 55px 37px 110px;
+
+
+  background: white;
+  background: -webkit-linear-gradient(top, #19384A, #347787);
+  background: -o-linear-gradient(top, #19384A, #347787);
+  background: -moz-linear-gradient(top, #19384A, #347787);
+  background: linear-gradient(top, #19384A, #347787);
+}
+
 .signup-form {
   height: 500px;
 }
